--- a/index.html
+++ b/index.html
@@ -1,35 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-<header>
-    <div class="container">
-            <img src="images/search_button.png">
-            <input type="text" placeholder="רשום מילת חיפוש"/>
-            <button>English</button>
-            
-             <nav>
-        <ul>
-          <li><a href="#">אודות</a></li>
-          <li><a href="#">חטיבות</a></li>
-          <li><a href="#">אחריות תאגידית</a></li>
-          <li><a href="#">קשרי משקיעים</a></li>
-          <li><a href="#">התחנות שלנו</a></li>
-          <li><a href="#">קריירה</a></li>
-          <li><a href="#">חדשות ומדיה</a></li>
-          <li><img src="images\menu_home.png" alt="menu home"></a></li>
-          <li><img src="images\paz_logo.png" alt="paz logo"></a></li>
-        </ul>
-      </nav>
-             
-    </div>
 
-</header>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <header class="container">
+    <img src="images/search_button.png">
+    <input type="text" placeholder="רשום מילת חיפוש" />
+    <button>English</button>
+
+    <nav>
+      <ul>
+        <li><a href="#">אודות</a>
+          <div class="submenue">
+            <a href="#">אודות</a>
+            <a href="#">הסטוריה</a>
+            <a href="#">חזון וערכים</a>
+            <a href="#">מבנה הקבוצה</a>
+            <a href="#">חברי הדירקטוריון</a>
+            <a href="#">הנהלת הקבוצה</a>
+            <a href="#">פרסים והוקרה</a>
+          </div>
+        </li>
+        <li><a href="#">חטיבות</a>
+          <div class="submenue">
+            <a href="#">חטיבות</a>
+            <a href="#">קמעונאות ומסחר</a>
+            <a href="#">תעשיות ושירותים</a>
+            <a href="#">זיקוק</a>
+          </div>
+        </li>
+        <li><a href="#">אחריות תאגידית</a></li>
+        <li><a href="#">קשרי משקיעים</a></li>
+        <li><a href="#">התחנות שלנו</a></li>
+        <li><a href="#">קריירה</a></li>
+        <li><a href="#">חדשות ומדיה</a></li>
+        <li><img src="images\menu_home.png" alt="menu home"></a></li>
+        <li><img src="images\paz_logo.png" alt="paz logo"></a></li>
+      </ul>
+    </nav>
+  </header>
+  <main class="container">
+    <div class="raw">
+      <div class="cube">
+        <img src="images\1908364606615453350.jpg">
+        <div class="content">
+          <h4>קמעונאות ומסחר</h4>
+          <p>קמעונאות ומסחר
+            במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת בחדשנות, יעילות
+            ומובילות. החטיבה פועלת...
+
+            קרא עוד
+          </p>
+        </div>
+      </div>
+      <div class="cube">
+        <img src="images\Picture-046410251500.jpg">
+        <div class="content">
+          <h4>זיקוק</h4>
+          <p>פז זיקוק אשדוד (פז"א) היא חטיבת הזיקוק של קבוצת פז. החטיבה עוסקת בניהול פעילות בית הזיקוק באשדוד, הכוללת
+            ייצור תזקיקי נפט...
+
+            קרא עוד
+          </p>
+        </div>
+      </div>
+      <div class="cube">
+        <img src="images\פזקר_-291_354410564000.jpg">
+        <div class="content">
+          <h4>תעשיות ושירותים</h4>
+          <p>תחת חטיבת התעשיות והשירותים של פז פועלות מספר חברות בנות, המתמחות בפיתוח, ייצור ושיווק מוצרי לוואי של נפט,
+            ומובילות את השוק...
+
+            קרא עוד
+          </p>
+        </div>
+      </div>
+    </div>
+    </div>
+    <div class="raw1"></div>
+    <div class="cube1">
+      <img src="images\cube_bg.png">
+      <div class="content1">
+        <h4>כרטיס אשראי שופרסל וכרטיס אשראי יש</h4>
+        <img src="images\paz_250x110059890678.jpg">
+        <p>לפרטים נוספים</p>
+      </div>
+    </div>
+    <div class="cube1">
+      <img src="images\cube_bg.png">
+      <div class="content1">
+        <h4>טיפז</h4>
+        <img src="images\250X110668568400.jpg">
+        <p>לפרטים נוספים</p>
+      </div>
+    </div>
+    <div class="cube1">
+      <img src="images\cube_bg.png">
+      <div class="content1">
+        <h4>התחנות שלנו בדרך שלך</h4>
+        <img class="map" src="images\Untitled-3058756287.jpg">
+        <p>לפרטים נוספים</p>
+      </div>
+    </div>
+    </div>
+  </main>
 </body>
+
 </html>
