--- a/index.html
+++ b/index.html
@@ -10,41 +10,43 @@
 </head>
 
 <body>
-  <header class="container">
-    <img src="images/search_button.png">
-    <input type="text" placeholder="רשום מילת חיפוש" />
-    <button>English</button>
+  <header>
+    <div class="container">
+      <a href="#"><img src="images/search_button.png"></a>
+      <input type="text" placeholder="רשום מילת חיפוש" />
+      <button><a href="#">English</a></button>
 
-    <nav>
-      <ul>
-        <li><a href="#">אודות</a>
-          <div class="submenue">
-            <a href="#">אודות</a>
-            <a href="#">הסטוריה</a>
-            <a href="#">חזון וערכים</a>
-            <a href="#">מבנה הקבוצה</a>
-            <a href="#">חברי הדירקטוריון</a>
-            <a href="#">הנהלת הקבוצה</a>
-            <a href="#">פרסים והוקרה</a>
-          </div>
+      <nav>
+        <ul>
+          <li><img src="images\paz_logo.png" alt="paz logo"></a></li>
+          <li><img src="images\menu_home.png" alt="menu home"></a></li>
+          <li class="menue"><a href="#">אודות</a>
+              <div class="submenue">
+                <a href="#">אודות</a>
+                <a href="#">הסטוריה</a>
+                <a href="#">חזון וערכים</a>
+                <a href="#">מבנה הקבוצה</a>
+                <a href="#">חברי הדירקטוריון</a>
+                <a href="#">הנהלת הקבוצה</a>
+                <a href="#">פרסים והוקרה</a>
+              </div>
+          </li>
+          <li class="menue"><a href="#">חטיבות</a>
+            <div class="submenue">
+              <a href="#">חטיבות</a>
+              <a href="#">קמעונאות ומסחר</a>
+              <a href="#">תעשיות ושירותים</a>
+              <a href="#">זיקוק</a>
+            </div>
         </li>
-        <li><a href="#">חטיבות</a>
-          <div class="submenue">
-            <a href="#">חטיבות</a>
-            <a href="#">קמעונאות ומסחר</a>
-            <a href="#">תעשיות ושירותים</a>
-            <a href="#">זיקוק</a>
-          </div>
-        </li>
-        <li><a href="#">אחריות תאגידית</a></li>
-        <li><a href="#">קשרי משקיעים</a></li>
-        <li><a href="#">התחנות שלנו</a></li>
-        <li><a href="#">קריירה</a></li>
-        <li><a href="#">חדשות ומדיה</a></li>
-        <li><img src="images\menu_home.png" alt="menu home"></a></li>
-        <li><img src="images\paz_logo.png" alt="paz logo"></a></li>
-      </ul>
+    <li><a href="#">אחריות תאגידית</a></li>
+    <li><a href="#">קשרי משקיעים</a></li>
+    <li><a href="#">התחנות שלנו</a></li>
+    <li><a href="#">קריירה</a></li>
+    <li><a href="#">חדשות ומדיה</a></li>
+    </ul>
     </nav>
+    </div>
   </header>
   <main class="container">
     <div class="raw">
@@ -90,7 +92,7 @@
       <div class="content1">
         <h4>כרטיס אשראי שופרסל וכרטיס אשראי יש</h4>
         <img src="images\paz_250x110059890678.jpg">
-        <p>לפרטים נוספים</p>
+        <a href="#">לפרטים נוספים</a>
       </div>
     </div>
     <div class="cube1">
@@ -98,7 +100,7 @@
       <div class="content1">
         <h4>טיפז</h4>
         <img src="images\250X110668568400.jpg">
-        <p>לפרטים נוספים</p>
+        <a href="#">לפרטים נוספים</a>
       </div>
     </div>
     <div class="cube1">
@@ -106,9 +108,12 @@
       <div class="content1">
         <h4>התחנות שלנו בדרך שלך</h4>
         <img class="map" src="images\Untitled-3058756287.jpg">
-        <p>לפרטים נוספים</p>
+        <div class="areas">
+          <a href="#">צפון</a>
+          <a href="#">מרכז</a>
+          <a href="#">דרום</a>
+        </div>
       </div>
-    </div>
     </div>
   </main>
 </body>
