--- a/index.html
+++ b/index.html
@@ -20,32 +20,68 @@
         <ul>
           <li><img src="images\paz_logo.png" alt="paz logo"></a></li>
           <li><img src="images\menu_home.png" alt="menu home"></a></li>
-          <li class="menue"><a href="#">אודות</a>
-              <div class="submenue">
-                <a href="#">אודות</a>
-                <a href="#">הסטוריה</a>
-                <a href="#">חזון וערכים</a>
-                <a href="#">מבנה הקבוצה</a>
-                <a href="#">חברי הדירקטוריון</a>
-                <a href="#">הנהלת הקבוצה</a>
-                <a href="#">פרסים והוקרה</a>
-              </div>
+          <li class="menu"><a href="אודות.png">אודות</a>
+            <div class="submenu">
+              <a href="#">אודות</a>
+              <a href="#">הסטוריה</a>
+              <a href="#">חזון וערכים</a>
+              <a href="#">מבנה הקבוצה</a>
+              <a href="#">חברי הדירקטוריון</a>
+              <a href="#">הנהלת הקבוצה</a>
+              <a href="#">פרסים והוקרה</a>
+            </div>
           </li>
-          <li class="menue"><a href="#">חטיבות</a>
-            <div class="submenue">
+          <li class="menu"><a href="#">חטיבות</a>
+            <div class="submenu">
               <a href="#">חטיבות</a>
               <a href="#">קמעונאות ומסחר</a>
               <a href="#">תעשיות ושירותים</a>
               <a href="#">זיקוק</a>
             </div>
-        </li>
-    <li><a href="#">אחריות תאגידית</a></li>
-    <li><a href="#">קשרי משקיעים</a></li>
-    <li><a href="#">התחנות שלנו</a></li>
-    <li><a href="#">קריירה</a></li>
-    <li><a href="#">חדשות ומדיה</a></li>
-    </ul>
-    </nav>
+          </li>
+          <li class="menu"><a href="#">אחריות תאגידית</a>
+            <div class="submenu">
+              <a href="#">אחריות תאגידית</a>
+              <a href="#">הקוד האתי</a>
+              <a href="#">מעורבות חברתית</a>
+              <a href="#">נגישות</a>
+              <a href="#">איכות הסביבה ובטיחות</a>
+              <a href="#">דירוג מעלה/a>
+
+            </div>
+          </li>
+          <li class="menu"><a href="#">קשרי משקיעים</a>
+            <div class="submenu">
+              <a href="#">פרופיל חברה</a>
+              <a href="#">דוחות כספיים</a>
+              <a href="#">כלים למשקיע</a>
+              <a href="#">נתוני מניה</a>
+              <a href="#">אסיפות כלליות</a>
+            </div>
+          </li>
+          <li CLASS="menu"><a href="#">התחנות שלנו</a>
+            <div class="submenu">
+              <a href="#">התחנות שלנו</a>
+              <a href="#">נגישות מתחמי פז</a>
+              <a href="#">רשימת תחנות</a>
+              <a href="#">מועדונים</a>
+            </div>
+          </li>
+          <li class="menu"><a href="#">קריירה</a>
+            <div class="submenu">
+              <a href="#">לעבוד בפז</a>
+              <a href="#">ניהול תחנת פז</a>
+              <a href="#">קריירה</a>
+            </div>
+          </li>
+          <li class="menu"><a href="#">חדשות ומדיה</a>
+            <div class="submenu">
+              <a href="#">פרסומות</a>
+              <a href="#">הודעות לעיתונות</a>
+            </div>
+          </li>
+        </ul>
+      </nav>
     </div>
   </header>
   <main class="container">
@@ -116,6 +152,23 @@
       </div>
     </div>
   </main>
+  <footer>
+    <div class="container">
+      <nav>
+        <ul>
+          <li class="footer"><a href="#"><img src="images/fb_icon.png" alt=""></a></li>
+          <li class="footer"><a href="#">עמוד הבית</a></li>
+          <li class="footer"><a href="#">מחירונים</a></li>
+          <li class="footer"><a href="#">קריירה</a></li>
+          <li class="footer"><a href="#">תנאי שימוש</a></li>
+          <li class="footer"><a href="#">נגישות</a></li>
+          <li class="footer"><a href="#">מפת אתר</a></li>
+          <li class="footer"><a href="צור קשר.png">צור קשר</a></li>
+          <li class="footer"><a href="#">שטחי מסחר</a></li>
+        </ul>
+      </nav>
+    </div>
+  </footer>
 </body>
 
 </html>
