--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
 
 <body>
   <header>
-    <div class="container">
-      <a href="#"><img src="images/search_button.png"></a>
-      <input type="text" placeholder="רשום מילת חיפוש" />
-      <button><a href="#">English</a></button>
-
-      <nav>
+    <nav>
+      <div class="container">
+        <a href="#"><img src="images/search_button.png"></a>
+        <input type="text" placeholder="רשום מילת חיפוש" />
+        <button><a href="#">English</a></button>
         <ul>
           <li><img src="images\paz_logo.png" alt="paz logo"></a></li>
           <li><img src="images\menu_home.png" alt="menu home"></a></li>
@@ -81,8 +80,8 @@
             </div>
           </li>
         </ul>
-      </nav>
-    </div>
+      </div>
+    </nav>
   </header>
   <main class="container">
     <div class="raw">
@@ -156,15 +155,15 @@
     <div class="container">
       <nav>
         <ul>
-          <li class="footer"><a href="#"><img src="images/fb_icon.png" alt=""></a></li>
-          <li class="footer"><a href="#">עמוד הבית</a></li>
-          <li class="footer"><a href="#">מחירונים</a></li>
-          <li class="footer"><a href="#">קריירה</a></li>
-          <li class="footer"><a href="#">תנאי שימוש</a></li>
-          <li class="footer"><a href="#">נגישות</a></li>
-          <li class="footer"><a href="#">מפת אתר</a></li>
-          <li class="footer"><a href="צור קשר.png">צור קשר</a></li>
-          <li class="footer"><a href="#">שטחי מסחר</a></li>
+          <li><a href="#"><img src="images/fb_icon.png" alt=""></a></li>
+          <li><a href="#">עמוד הבית</a></li>
+          <li><a href="#">מחירונים</a></li>
+          <li><a href="#">קריירה</a></li>
+          <li><a href="#">תנאי שימוש</a></li>
+          <li><a href="#">נגישות</a></li>
+          <li><a href="#">מפת אתר</a></li>
+          <li><a href="צור קשר.png">צור קשר</a></li>
+          <li><a href="#">שטחי מסחר</a></li>
         </ul>
       </nav>
     </div>
