--- a/index- Contact page.html
+++ b/index- Contact page.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style - Contact page.css">
 </head>
 
 <body>
@@ -19,7 +19,7 @@
         <ul>
           <li><img src="images\paz_logo.png" alt="paz logo"></a></li>
           <li><img src="images\menu_home.png" alt="menu home"></a></li>
-          <li class="menu"><a href="אודות.png">אודות</a>
+          <li class="menu"><a href="#">אודות</a>
             <div class="submenu">
               <a href="#">אודות</a>
               <a href="#">הסטוריה</a>
@@ -83,7 +83,76 @@
       </div>
     </nav>
   </header>
-  
+
+
+  <main class="container">
+    <button>
+      <a href="#">צור קשר</a>
+    </button>
+    <div class="formCube">
+      <div class="subheader">
+        <a href="index.html">עמוד הבית</a>
+        > צור קשר
+        <h4>צור קשר</h4>
+      </div>
+      <img src="images/contact_form_bg.png" alt="backgroung pic">
+      <div class="content">
+        <form>
+          <h4>צור קשר</h4>
+          <p>ליצירת קשר עם קשרי לקוחות אנא מלאו את הפרטים הבאים ואנו נשמח לעמוד לרשותכם :
+            * השדות המסומנים בכוכבית (*) הינם שדות חובה</p>
+          <div class="row">
+            <label for="name">שם פרטי</label>
+            <input type="text" id="name" />
+          </div>
+          <div class="row">
+            <label for="name">שם משפחה</label>
+            <input type="text" id="name" />
+          </div>
+          <div class="row">
+            <label for="name">טלפון</label>
+            <input type="text" id="name" />
+          </div>
+          <div class="row">
+            <label for="name">E-mail</label>
+            <input type="text" id="name" />
+          </div>
+          <div class="row">
+            <input type="text" class="application" placeholder="תוכן הפניה" />
+          </div>
+          <div class="row">
+            <button type="button">שלח</button>
+          </div>
+        </form>
+      </div>
+    </div>
+    <div class="leftCube">
+      <img src="images/small_cube_bg.png">
+      <div class="content">
+        <h4>פרטי יצירת קשר</h4>
+        <p> פז חברת נפט בע"מ
+          יורו פארק, בניין הולנד
+          קיבוץ יקום 60972
+          טל. שירות לקוחות 1-800-774-774
+          פקס.09-8641714
+        </p>
+      </div>
+    </div>
+    <div class="leftCube">
+      <img src="images/small_cube_bg.png">
+      <div class="content">
+        <h4>עוד בפז</h4>
+        <p>ליצירת קשר עם דוברות פז</p>
+        <a href="#">לחצו כאן</a>
+        <p>רוצים לעבוד בפז</p>
+        <a href="#">לחצו כאן</a>
+      </div>
+    </div>
+  </main>
+
+
+
+
   <footer>
     <div class="container">
       <nav>
@@ -95,7 +164,7 @@
           <li><a href="#">תנאי שימוש</a></li>
           <li><a href="#">נגישות</a></li>
           <li><a href="#">מפת אתר</a></li>
-          <li><a href="צור קשר.png">צור קשר</a></li>
+          <li><a href="#">צור קשר</a></li>
           <li><a href="#">שטחי מסחר</a></li>
         </ul>
       </nav>
