--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <ul>
           <li><img src="images\paz_logo.png" alt="paz logo"></a></li>
           <li><img src="images\menu_home.png" alt="menu home"></a></li>
-          <li class="menu"><a href="אודות.png">אודות</a>
+          <li class="menu"><a href="#">אודות</a>
             <div class="submenu">
               <a href="#">אודות</a>
               <a href="#">הסטוריה</a>
@@ -121,32 +121,33 @@
       </div>
     </div>
     </div>
-    <div class="raw1"></div>
-    <div class="cube1">
-      <img src="images\cube_bg.png">
-      <div class="content1">
-        <h4>כרטיס אשראי שופרסל וכרטיס אשראי יש</h4>
-        <img src="images\paz_250x110059890678.jpg">
-        <a href="#">לפרטים נוספים</a>
+    <div class="raw1">
+      <div class="cube1">
+        <img src="images\cube_bg.png">
+        <div class="content1">
+          <h4>כרטיס אשראי שופרסל וכרטיס אשראי יש</h4>
+          <img src="images\paz_250x110059890678.jpg">
+          <a href="#">לפרטים נוספים</a>
+        </div>
       </div>
-    </div>
-    <div class="cube1">
-      <img src="images\cube_bg.png">
-      <div class="content1">
-        <h4>טיפז</h4>
-        <img src="images\250X110668568400.jpg">
-        <a href="#">לפרטים נוספים</a>
+      <div class="cube1">
+        <img src="images\cube_bg.png">
+        <div class="content1">
+          <h4>טיפז</h4>
+          <img src="images\250X110668568400.jpg">
+          <a href="#">לפרטים נוספים</a>
+        </div>
       </div>
-    </div>
-    <div class="cube1">
-      <img src="images\cube_bg.png">
-      <div class="content1">
-        <h4>התחנות שלנו בדרך שלך</h4>
-        <img class="map" src="images\Untitled-3058756287.jpg">
-        <div class="areas">
-          <a href="#">צפון</a>
-          <a href="#">מרכז</a>
-          <a href="#">דרום</a>
+      <div class="cube1">
+        <img src="images\cube_bg.png">
+        <div class="content1">
+          <h4>התחנות שלנו בדרך שלך</h4>
+          <img class="map" src="images\Untitled-3058756287.jpg">
+          <div class="areas">
+            <a href="#">צפון</a>
+            <a href="#">מרכז</a>
+            <a href="#">דרום</a>
+          </div>
         </div>
       </div>
     </div>
@@ -162,7 +163,7 @@
           <li><a href="#">תנאי שימוש</a></li>
           <li><a href="#">נגישות</a></li>
           <li><a href="#">מפת אתר</a></li>
-          <li><a href="צור קשר.png">צור קשר</a></li>
+          <li><a href="index- Contact page.html">צור קשר</a></li>
           <li><a href="#">שטחי מסחר</a></li>
         </ul>
       </nav>
