--- a/index- Contact page.html
+++ b/index- Contact page.html
@@ -132,7 +132,7 @@
         <h4>פרטי יצירת קשר</h4>
         <p> פז חברת נפט בע"מ
           יורו פארק, בניין הולנד
-          קיבוץ יקום 60972
+          קיבוץ יקום 60972 <br>
           טל. שירות לקוחות 1-800-774-774
           פקס.09-8641714
         </p>
